# proc-pixel-art

./: .gitignore  CMakeLists.txt
src/: #main.cpp#  image.cpp  image.h  layer.cpp  layer.h  main.cpp  pixel.cpp  pixel.h  writer.cpp  writer.h
src/common/: perlin_noise.cpp  perlin_noise.h
